# collectc

./: .clang-format  CMakeLists.txt  README.md
include/: collectc.h
include/collectc/: vector.h
src/: vector.c
test/: main.c  test.c  test.h  vector.c
